# cpp-example

./: README.md
GuitarTunerPlugin/: CMakeLists.txt
GuitarTunerPlugin/Source/: GuitarPitchDetectionFX.cpp  GuitarPitchDetectionFX.h  RBJFilters.cpp  RBJFilters.h  SettingsManager.cpp  SettingsManager.h  Utils.h  VectorOps.h
